--- a/index.html
+++ b/index.html
@@ -41,19 +41,18 @@
     <script type="text/javascript" src="node_modules/mdbootstrap/js/popper.min.js"></script>
     <script type="text/javascript" src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="node_modules/mdbootstrap/js/mdb.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js">
-    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"
     integrity="sha384-THVO/sM0mFD9h7dfSndI6TS0PgAGavwKvB5hAxRRvc0o9cPLohB0wb/PTA7LdUHs"
     crossorigin="anonymous"></script>
-    <script src="src/htmlSelector.js"></script>
-    <script src="src/pdf.js"></script>
-    <script src="src/transcription.js"></script>
-    <script src="src/app.js"></script>
-    <script src="src/auth.js"></script>
+    <script type="module" src="src/api.js"></script>
+    <script type="module" src="src/htmlSelector.js"></script>
+    <script type="module" src="src/pdf.js"></script>
+    <script type="module" src="src/transcription.js"></script>
+    <script type="module" src="src/app.js"></script>
+    <script type="module" src="src/auth.js"></script>
     
   </body>
 </html>
