--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Entrar</button>
       <hr/>
-      <a href="./signUp.html">Não possui uma conta? Cadastre-se grátis</a>
+      <a href="./pages/signUp.html">Não possui uma conta? Cadastre-se grátis</a>
     </form>
   </div>
 
