--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -15,7 +15,7 @@
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Cadastrar</button>
       <hr/>
-      <a href="./index.html">Já possui uma conta? Faça login</a>
+      <a href="../index.html">Já possui uma conta? Faça login</a>
     </form>
   </div>
 
