Listing all pdf Files. The links are working just fine

--- a/pages/listFiles.html
+++ b/pages/listFiles.html
@@ -7,12 +7,12 @@
   <title>Lista de arquivos</title>
 </head>
 <body>
-  <div class="container">
+  <div id="container">
     
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
-  <!-- <script type="module" src="../src/services/auth.js"></script> -->
+  <script type="module" src="../src/services/auth.js"></script>
   <script type="module" src="../src/services/api.js"></script>
   <script type="module" src="../src/listFiles.js"></script>
 </body>
