--- a/pages/transcription.html
+++ b/pages/transcription.html
@@ -9,10 +9,10 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/mdb.min.css">
-    <link rel="stylesheet" href="node_modules/mdbootstrap/css/style.css">
-    <link rel="stylesheet" href="styles/transcription.css">
+    <link rel="stylesheet" href="../node_modules/mdbootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/mdbootstrap/css/mdb.min.css">
+    <link rel="stylesheet" href="../node_modules/mdbootstrap/css/style.css">
+    <link rel="stylesheet" href="../styles/transcription.css">
   </head>
   <body>
     <div class="principal">
@@ -35,25 +35,27 @@
         <p class="text-output" id="finalOutput"></p>
       </div>
 
+      <a href="./listFiles.html"> Registro de arquivos transcritos </a>
+
     </div>
 
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/jquery.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/popper.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="node_modules/mdbootstrap/js/mdb.min.js"></script>
+    <script type="text/javascript" src="../node_modules/mdbootstrap/js/jquery.min.js"></script>
+    <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
+    <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../node_modules/mdbootstrap/js/mdb.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"
     integrity="sha384-THVO/sM0mFD9h7dfSndI6TS0PgAGavwKvB5hAxRRvc0o9cPLohB0wb/PTA7LdUHs"
     crossorigin="anonymous"></script>
-    <script type="module" src="src/htmlSelector.js"></script>
-    <script type="module" src="src/pdf.js"></script>
-    <script type="module" src="src/transcription.js"></script>
-    <script type="module" src="src/app.js"></script>
-    <script type="module" src="src/routes.js"></script>
-    <script type="module" src="src/services/auth.js"></script>
-    <script type="module" src="src/services/api.js"></script>
+    <script type="module" src="../src/htmlSelector.js"></script>
+    <script type="module" src="../src/pdf.js"></script>
+    <script type="module" src="../src/transcription.js"></script>
+    <script type="module" src="../src/app.js"></script>
+    <script type="module" src="../src/routes.js"></script>
+    <script type="module" src="../src/services/auth.js"></script>
+    <script type="module" src="../src/services/api.js"></script>
     
   </body>
 </html>
