--- a/pages/transcription.html
+++ b/pages/transcription.html
@@ -37,6 +37,8 @@
 
       <a href="./listFiles.html"> Registro de arquivos transcritos </a>
 
+      <button id="logout">Logout</button>
+
     </div>
 
     <script type="text/javascript" src="../node_modules/mdbootstrap/js/jquery.min.js"></script>
@@ -53,9 +55,9 @@
     <script type="module" src="../src/pdf.js"></script>
     <script type="module" src="../src/transcription.js"></script>
     <script type="module" src="../src/app.js"></script>
-    <script type="module" src="../src/routes.js"></script>
     <script type="module" src="../src/services/auth.js"></script>
     <script type="module" src="../src/services/api.js"></script>
+    <script type="module" src="../src/logout.js"></script>
     
   </body>
 </html>
