--- a/pages/listFiles.html
+++ b/pages/listFiles.html
@@ -8,9 +8,7 @@
   <title>Lista de arquivos</title>
 </head>
 <body>
-  <div id="container">
-    
-  </div>
+  <div id="container"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
   <script type="module" src="../src/services/auth.js"></script>
