--- a/pages/transcription.html
+++ b/pages/transcription.html
@@ -18,11 +18,16 @@
     <div class="principal">
 
       <button id="start" class="btn btn-rounded btn-lg">
-        Iniciar reconhecimento de voz!
+        Iniciar reconhecimento de voz
         <i class="fas fa-microphone-alt fa-1x"></i>
       </button>
 
       <button id="stop" class="btn btn-rounded btn-lg">
+        Parar reconhecimento de voz
+        <i class="far fa-file-pdf fa-1x"></i>
+      </button>
+      
+      <button id="renderpdf" class="btn btn-rounded btn-lg">
         Gerar PDF do registro completo
         <i class="far fa-file-pdf fa-1x"></i>
       </button>
