--- a/pages/listFiles.html
+++ b/pages/listFiles.html
@@ -10,6 +10,12 @@
 <body>
   <div id="container"></div>
 
+  <script>
+    if(!localStorage.getItem('challenge-dow-quimica-transcription')) {
+      window.location.href='../index.html';
+    }
+  </script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
   <script type="module" src="../src/services/auth.js"></script>
   <script type="module" src="../src/services/api.js"></script>
