--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <form id="auth_user_form">
+      <img src="assets/logo.png" alt="Sea Path Logo">
       <input type="email" id="email" placeholder="Email" required>
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Entrar</button>
