--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <form id="create_user_form">
+      <img src="../assets/logo.png" alt="Sea Path Logo">
       <input type="text" id="name"  placeholder="Name" required>
       <input type="email" id="email" placeholder="Email" required>
       <input type="password" id="password" placeholder="Password" required>
